Trying to fix build action

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,8 +42,7 @@ jobs:
     #    uses a compiled language
 
     - run:
-       cd source
-       make -f makefile.g++
+       cd source && make -f makefile.g++
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
