--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,7 +42,7 @@ jobs:
     #    uses a compiled language
 
     - run:
-       cd source && make -f makefile.g++
+       mkdir lib && cd source && make -f makefile.g++
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
